Fixed colors contraste & rounded header

--- a/public/assets/css/container-first.css
+++ b/public/assets/css/container-first.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *    ,
- * 11 |         @media (max-width: $laptop) {
+ * 16 |         @media (max-width: $laptop) {
  *    |                            ^^^^^^^
  *    '
- *   sass\container-first.scss 11:28  root stylesheet */
+ *   sass\container-first.scss 16:28  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 11 \2502          @media (max-width: $laptop) {\d\a    \2502                             ^^^^^^^\a    \2575 \a   sass\\container-first.scss 11:28  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 16 \2502          @media (max-width: $laptop) {\d\a    \2502                             ^^^^^^^\a    \2575 \a   sass\\container-first.scss 16:28  root stylesheet";
 }
